--- a/FoodDiplomAlina/Pages/Index.cshtml
+++ b/FoodDiplomAlina/Pages/Index.cshtml
@@ -167,19 +167,19 @@
             <h2>Популярные посты</h2>
             <div class="posts">
                 <div class="post">
-                    <img src="../Photo/testphoto1.jpg" alt="Fish Burger">
+                    <img src="Images/food.png" alt="Fish Burger">
                     <h3>Fish Burger</h3>
                     <p>⭐ ⭐ ⭐ ⭐ ⭐</p>
                     <button class="like-btn">❤️</button>
                 </div>
                 <div class="post popular">
-                    <img src="../Photo/testphoto1.jpg" alt="Beef Burger">
+                    <img src="Images/food.png" alt="Cheese Burger">
                     <h3>Beef Burger</h3>
                     <p>⭐ ⭐ ⭐ ⭐ ⭐</p>
                     <button class="like-btn">❤️</button>
                 </div>
                 <div class="post">
-                    <img src="../Photo/testphoto1.jpg" alt="Cheese Burger">
+                    <img src="Images/food.png" alt="Cheese Burger">
                     <h3>Cheese Burger</h3>
                     <p>⭐ ⭐ ⭐ ⭐ ⭐</p>
                     <button class="like-btn">❤️</button>
@@ -215,6 +215,5 @@
             });
         });
     </script>
-
 </body>
 </html>
